# grove

./: .gitignore  DESIGN.md  LICENSE  README.md  index.html  jsconfig.json  package-lock.json  package.json  vite.config.js
src/: App.svelte  BranchPicker.svelte  Changes.svelte  CommitDetail.svelte  CommitGraph.svelte  Copy.svelte  DiffModal.svelte  DiffView.svelte  FileView.svelte  Finder.svelte  Home.svelte  NavHub.svelte  OpenModals.svelte  Picker.svelte  Sidebar.svelte  Skeleton.svelte  Spotlight.svelte  Worktrees.svelte  WrapToggle.svelte  copy.js  diffwrap.svelte.js  highlight.js  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/agent/: mod.rs
src-tauri/src/repo/: mod.rs  read.rs  write.rs
