[package]
name = "grove"
version = "0.1.3"
description = "A git companion that sits beside your editor"
authors = ["capad <hi@capad.fyi>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/capad-xyz/grove"
edition = "2021"

# The library is what mobile and the desktop binary both call into.
[lib]
name = "grove_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gix = "0.85.0"
anyhow = "1.0.102"
notify = "8.2.0"
# gix (reads), anyhow (errors), notify (live refresh) are added via `cargo add`
# so versions resolve to the current release. See DESIGN.md section 2.
